<resources>
    <string name="app_name">AGOCar</string>
    <string name="landing_desc">Discover your Dream Car Here</string>

    <string name="app_quotes">"Our Quotes"</string>


    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="favourites">Favourites</string>
    <string name="viewAll">View All</string>

    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="register">Register</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="enterYourEmail">Enter Your Email. . .</string>
    <string name="enterYourPassword">Enter Your Password. . .</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="noAccount">Don\'t Have an Account?</string>
    <string name="username">Username</string>
    <string name="enterYourUsername">Enter Your Username. . .</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="enterConfirmPassword">Re-enter Your Password. . .</string>
    <string name="haveAccount">Already Have an Account?</string>
    <string name="preferences">Preferences</string>
    <string name="skip">Skip</string>
    <string name="whichBrand">Which brand of car you prefer?</string>
    <string name="done">Done</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello">Hello, You</string>
    <string name="brands">Brands</string>
    <string name="selectedCars">Selected cars for you</string>
    <string name="cars">Cars</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="articles">Articles</string>
    <string name="featuredArticles">Featured Articles</string>
    <string name="recommendedForYou">Recommended For You</string>
    <string name="notifications">Notifications</string>

    <string name="carNamePlaceholder">Car Name</string>
    <string name="fuelType">Fuel Type</string>

    <string name="addArticle">Add Article</string>
    <string name="save">Save</string>
    <string name="articleTitle">Article Title</string>
    <string name="articleDescription">Article Description</string>
    <string name="logOut">Log Out</string>
    <string name="yourReviews">Your Reviews</string>
    <string name="editProfile">Edit Profile</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="search">Search. . .</string>
    <string name="popularCars">Popular Cars</string>
    <string name="ratings">5.0</string>
    <string name="hp">1600 hp</string>

    <string name="carName">Car Name</string>
    <string name="carDescription">Car Description</string>
    <string name="engineHP">Engine Horsepower</string>
    <string name="carPrice">Car Price</string>
    <string name="carRating">Car Rating</string>
    <string name="addCar">Add Car</string>
    <string name="rating">Rating</string>
    <string name="engine">Engine</string>
    <string name="transmission">Transmission</string>
    <string name="comment">Comment</string>
    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="insertNewArticle">Successfully Inserted new Article!</string>
    <string name="allFields">All Fields must be Filled!</string>
    <string name="minArticle">Article Description minimum 100 characters!</string>
    <string name="maxImageSize">Article Image size maximum 1 MegaBytes!</string>
    <string name="insertNewCar">Successfully Inserted new Car!</string>
    <string name="ratingCommentFields">Rating and Comment Fields must be filled!</string>
    <string name="insertNewReview">Successfully posted new review!</string>
    <string name="unablePostReview">Unable to post review... Please try again!</string>
    <string name="deleteArticle">Successfully deleted article!</string>
    <string name="invalidEmailUsername">Invalid Email / Password!</string>
    <string name="select1">Please Select at least 1 preferred Brand!</string>
    <string name="savePreferenced">Successfully save preferenced brand!</string>
    <string name="failedSavePref">Failed to save preferenced brand! Please try again...</string>
    <string name="emailExist">Email Already Exist!</string>
    <string name="alphanumeric">Password must be alphanumeric!</string>
    <string name="invalidConf">Invalid Confirmation Password!</string>
    <string name="insertUser">Successfully Created User!</string>
    <string name="failedUser">Failed Creating New User!</string>
    <string name="unableUnlike">Unable to unlike car right now! Please try again...</string>
    <string name="unableLike">Unable to like car right now! Please try again...</string>
    <string name="updateCar">Successfully Update a Car!</string>
    <string name="selectAction">Select Action</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="updateReview">Successfully Update a Review!</string>
    <string name="deleteConfirmation">Delete Confirmation</string>
    <string name="deleteReview">Are you sure you want to delete the selected review?</string>
    <string name="confirm">Confirm</string>
    <string name="successDeleteReview">Successfully deleted review!</string>
    <string name="updateArticle">Successfully Update an Article!</string>
    <string name="deleteSelectedArticle">Are you sure you want to delete the selected article?</string>
    <string name="deleteCar">Are you sure you want to delete the selected car?</string>
    <string name="ratingInvalid">Rating is invalid!</string>
</resources>