<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="14dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/llLogin"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/register"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/grey"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llRegister"
        android:layout_marginTop="18dp"
        android:paddingHorizontal="15dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailAddress"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/round_edit_text"
            android:hint="@string/enterYourEmail"
            android:paddingVertical="12dp"
            android:paddingHorizontal="5dp"
            android:textSize="15sp"
            android:layout_marginVertical="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:layout_marginTop="10dp"

            />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/round_edit_text"
            android:hint="@string/enterYourPassword"
            android:paddingVertical="10dp"
            android:paddingHorizontal="5dp"
            android:textSize="15sp"
            android:layout_marginVertical="5dp"
            />
        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword"
            android:textColor="@color/grey"
            android:textAlignment="textEnd"
            />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noAccount"
                android:textColor="@color/grey"
                />
            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/grey"
                android:textStyle="bold"
                />


        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>