<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferencesActivity">

    <TextView
        android:id="@+id/tvPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/preferences"
        android:textStyle="bold"
        android:textSize="27sp"
        android:layout_marginTop="14dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvPreferences"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="22dp"
        android:text="@string/skip"
        android:textSize="15sp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        />

    <TextView
        android:id="@+id/tvwhichBrand"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPreferences"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="50dp"
        android:text="@string/whichBrand"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginRight="80dp"
        android:layout_marginTop="17dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvwhichBrand"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        />
    
    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="50dp"
        android:text="@string/done"
        android:layout_marginBottom="50dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>