<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsActivity">

    <TextView
        android:id="@+id/tvArticles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/articles"
        android:fontFamily="@font/lexendmed"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="18dp"
        />

    <TextView
        android:id="@+id/tvFeaturedArticles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvArticles"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/featuredArticles"
        android:fontFamily="@font/lexendmed"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFeaturedArticles"
        android:layout_width="wrap_content"
        android:layout_height="112dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvFeaturedArticles"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="6dp"
        />

    <TextView
        android:id="@+id/tvRecommendedForYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rvFeaturedArticles"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="13dp"
        android:text="@string/recommendedForYou"
        android:fontFamily="@font/lexendmed"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvRecommendedForYou"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="6dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/grey"
        >
        <LinearLayout
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="10dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_home"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_home"
                android:textStyle="bold"
                android:textAlignment="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="40dp"

            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_car"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cars"
                android:textStyle="bold"
                android:textAlignment="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="40dp"

            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_news"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/news"
                android:textStyle="bold"
                android:textAlignment="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_profile"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/profile"
                android:textStyle="bold"
                android:textAlignment="center"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>