<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddArticleActivity">

    <TextView
        android:id="@+id/tvAddArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/addArticle"
        app:layout_constraintHorizontal_bias="0.498"
        android:textSize="25sp"
        android:fontFamily="@font/lexendmed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toStartOf="@+id/tvAddArticle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="43dp"
        android:textColor="@color/grey"
        android:fontFamily="@font/lexendmed"
        android:text="@string/save"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/tvAddArticle"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivDisplayedImage"
        android:layout_width="313dp"
        android:layout_height="161dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddArticle"
        android:src="@drawable/material_symbols_add_a_photo"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/etArticleTitle"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:layout_marginTop="59dp"
        android:background="@drawable/round_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDisplayedImage"
        android:hint="@string/articleTitle"
        android:paddingLeft="15dp"
        />
    <EditText
        android:gravity="top"
        android:paddingTop="10dp"
        android:id="@+id/etArticleDescription"
        android:layout_width="313dp"
        android:layout_height="280dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etArticleTitle"
        android:hint="@string/articleDescription"
        android:paddingLeft="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>