<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/tvEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lexendmed"
        android:text="@string/editProfile"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civImage"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:layout_constraintTop_toBottomOf="@id/tvEditProfile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="34dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/civImage"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="13dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexendmed"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/round_edit_text"
            android:paddingVertical="12dp"
            android:paddingHorizontal="5dp"
            android:textSize="15sp"
            android:layout_marginVertical="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexendmed"
            android:text="@string/emailAddress"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/round_edit_text"
            android:paddingVertical="12dp"
            android:paddingHorizontal="5dp"
            android:textSize="15sp"
            android:layout_marginVertical="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexendmed"
            android:text="@string/currentPassword"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/etCurrPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/round_edit_text"
            android:paddingVertical="12dp"
            android:paddingHorizontal="5dp"
            android:textSize="15sp"
            android:layout_marginVertical="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexendmed"
            android:text="@string/newPassword"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/round_edit_text"
            android:paddingVertical="12dp"
            android:paddingHorizontal="5dp"
            android:textSize="15sp"
            android:layout_marginVertical="5dp"
            />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            android:fontFamily="@font/lexendmed"
            android:textSize="16sp"
            android:textStyle="bold"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>